1.1.0
   - bug [11043] "ESHarvester bør frigive ikke-uførte jobs ved nedlukning af Datadock"
   - bug [11284] "Burde vi ikke skifte lib/fedora-*-3.2.1.jar ud med versionerne fra 3.3?"
   - bug [11190] "Hvis Datadocken bliver kørt med shutDownOnJobsDone=true kan der være jobs, hvis information om dets resultat vi mister"
   - bug [11419] "Oprydning i javakode i forbindelse med brug af python-RDF-konvertering"
   - bug [11259] "Relationer hvor subject og object for relationen er den samme pid"
   - bug [11421] "søgefunktioner skal ændres til at bruge Condition.java"
   - bug [11549] "Metoderne findPropertiesPid of findPropertyPid kan fjernes"
   - bug [11548] "Metoderne addIsMbrOfCollRelationship og addIsMbrOfCollRelationshipNewRelsExt bruges ikke og kan fjernes"
   - bug [10559] "Låsning af FedoraHandle"
   - bug [11406] "Vi skal bruge en condition-klasse"
   - bug [11292] "dk/dbc/opensearch/common/metadata/DublinCoreTerms.java bliver tilsyneladende ikke brugt"
   - bug [11293] "DocbookAnnotate* kan slettes."
   - bug [11280] "DublinCore og DublinCoreElement skal flyttes ind i DocbookAnnotationEnvironment"
   - bug [11043] "ESHarvester bør frigive ikke-uførte jobs ved nedlukning af Datadock"
   - bug [11211] "Når datadock bliver startet af app_starter.py med option start, lukker den ikke pænt ned hvis den har flere jobs"
   - bug [11197] "AdministrationStreamElement skal laves om til privat klasse i AdministrationStream"
   - bug [11170] "Kan vi slette replaceObject metoden fra IObjectRepository"
   - bug [11181] "IObjectRepository.getIdentifiers metoderne"
   - bug [11172] "Der er to IObjectRepository.getDataFromObject metoder, ingen af dem bruges"
   - bug [11173] "IObjectRepository.deleteDataFromObejct metoden bruges ikke."
   - bug [11184] "AdministrationFunc virker som et værktøj til test eller drift end en funktionel test"
   - bug [11187] "tests/functionaltests/dk/dbc/opensearch/plugins mappen er tom og bør fjernes"