@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11275] "Kan vi fjerne OpenSearchTransformException"
    - bug [11043] "ESHarvester bør frigive ikke-uførte jobs ved nedlukning af Datadock"
    - bug [11284] "Burde vi ikke skifte lib/fedora-*-3.2.1.jar ud med versionerne fra 3.3?"
    - bug [11190] "Hvis Datadocken bliver kørt med shutDownOnJobsDone=true kan der være jobs, hvis information om dets resultat vi mister"
